--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ packages = [{include = "example_app"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 
-
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
 mypy = "^0.991"
 pytest = "^7.2.0"
+flake8 = "^5.0.4"
 
 [build-system]
 requires = ["poetry-core"]
