--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install dependencies and Poetry
+    - name: Install pip, Poetry and dependencies
       run: |
         python -m pip install --upgrade pip
         curl -sSL https://install.python-poetry.org | python3 -
@@ -40,3 +40,6 @@ jobs:
     - name: Test with pytest
       run: |
         poetry run pytest
+    - name: Generate coverage
+      run: |
+        poetry run coverage run -m pytest
