--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ black = "^22.10.0"
 mypy = "^0.991"
 pytest = "^7.2.0"
 flake8 = "^5.0.4"
+coverage = "^6.5.0"
 
 [build-system]
 requires = ["poetry-core"]
