--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -4,7 +4,9 @@ name: Deploy coverage report to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master", "project-page"]
+    branches:
+      - "master"
+      - "project-page"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
