--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,12 +1,11 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy coverage report to Pages
+name: Deploy Github Pages
 
 on:
   # Runs on pushes targeting the default branch
   push:
     branches:
       - "master"
-      - "project-page"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -32,11 +31,6 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
-      - name: Checkout project site
-        uses: actions/checkout@v3
-        with:
-          ref: project-page
-          path: project-page
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
@@ -46,18 +40,19 @@ jobs:
           python -m pip install --upgrade pip
           curl -sSL https://install.python-poetry.org | python3 -
           poetry install
+      - name: Generate documentation
+        run: |
+          poetry run sphinx-build -b html docs site-content
       - name: Generate coverage report
         run: |
           poetry run coverage run -m pytest
-          poetry run coverage html -d coverage_report
-      - name: Copy project page content to root
-        run: cp -r project-page/* .
+          poetry run coverage html -d site-content/coverage-report
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: '.'
+          path: "./site-content"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
