--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "example_app"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+sphinx-rtd-theme = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
@@ -15,6 +16,7 @@ mypy = "^0.991"
 pytest = "^7.2.0"
 flake8 = "^5.0.4"
 coverage = "^6.5.0"
+sphinx = "^5.3.0"
 
 [build-system]
 requires = ["poetry-core"]
