--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           curl -sSL https://install.python-poetry.org | python3 -
-          poetry install
+          poetry install --with docs
       - name: Generate documentation
         run: |
           poetry run sphinx-build -b html docs site-content
